connect profile settings
