# backend/docs/swagger.json
@@ -33,11 +33,38 @@
                 "responses": {}
             }
         },
+        "/streams/:username": {
+            "get": {
+                "description": "Get the live stream for the user",
+                "tags": [
+                    "Streams"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username of the user",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/streams/delete-key/:streamKeyId": {
             "delete": {
                 "description": "Delete a stream key for a live stream",
                 "tags": [
                     "Streams"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Stream key id",
+                        "name": "streamKeyId",
+                        "in": "path",
+                        "required": true
+                    }
                 ],
                 "responses": {}
             }
@@ -67,6 +94,13 @@
                     "Users"
                 ],
                 "responses": {}
+            },
+            "patch": {
+                "description": "Update a user's information",
+                "tags": [
+                    "Users"
+                ],
+                "responses": {}
             }
         },
         "/users/follow/:username": {
@@ -74,6 +108,15 @@
                 "description": "Follow a user",
                 "tags": [
                     "Users"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username of the user",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
                 ],
                 "responses": {}
             }
@@ -83,6 +126,15 @@
                 "description": "Unfollow a user",
                 "tags": [
                     "Users"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username of the user",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
                 ],
                 "responses": {}
             }
